--- a/tailwind-sandbox/05-sizing/index.html
+++ b/tailwind-sandbox/05-sizing/index.html
@@ -8,27 +8,48 @@
     <title>Sizing</title>
   </head>
   <body>
+
     <!-- Width -->
+    <div class="bg-black text-white w-4">Test</div>
+    <div class="bg-black text-white w-48">Test</div>
+    <div class="bg-black text-white w-96">Test</div>
 
     <!-- Percentages -->
+    <div class="bg-green-800 text-white w-1/4">Test</div>
+    <div class="bg-green-800 text-white w-1/3">Test</div>
+    <div class="bg-green-800 text-white w-1/2">Test</div>
 
     <!-- Width of the viewport -->
+    <div class="bg-blue-500 text-white w-screen">Test</div>
 
     <!-- 100% of container -->
+    <div class="bg-blue-300 text-white w-full">Test</div>
 
     <!-- min/max content -->
+    
 
     <!-- Arbitrary width -->
+    <div class="bg-blue-700 text-white w-[300px]">Test</div>
 
     <!-- Max Width -->
+    <div class="bg-gray-300 max-w-lg mx-auto">Test</div>
 
     <!-- Height (Most of the same options as widths) -->
+    <div class="flex items-end">
+      <div class="bg-orange-500 w-20 h-24">Test</div>
+      <div class="bg-orange-500 w-20 h-32">Test</div>
+      <div class="bg-orange-500 w-20 h-40">Test</div>
+      <div class="bg-orange-500 w-20 h-48">Test</div>
+      <div class="bg-orange-500 w-20 h-64">Test</div>
+      <div class="bg-orange-500 w-20 h-96">Test</div>
+    </div>
 
     <!-- Min Height -->
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-blue-300 text-white h-screen">Test</div>
   </body>
 </html>
 
