--- a/tailwind-sandbox/10-interactivity/index.html
+++ b/tailwind-sandbox/10-interactivity/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -58,14 +58,30 @@
 
     <!-- Appearance -->
     <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+    <select class="appearance-none">
+      <option value="yes">Yes</option>
+      <option value="no">No</option>
+    </select>
 
     <!-- Cursor -->
+    <br>
+    <p class="cursor-pointer">Cursor</p>
+    <p class="cursor-not-allowed">Cursor</p>
 
     <!-- Resize -->
 
     <!-- User Select -->
+    <div class="select-none">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nisi!</div>
+    <div class="select-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nisi!</div>
+    <div class="select-all">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nisi!</div>
+    <div class="select-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nisi!</div>
+
+    <a href="#item" class="block my-6">Go to Item</a>
 
     <!-- Smooth Scroll Example -->
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda commodi quibusdam nostrum exercitationem debitis impedit ut accusamus, obcaecati reprehenderit ipsa incidunt ad dolores explicabo voluptatum voluptate nemo autem mollitia repudiandae quae adipisci! Accusamus, tenetur vel deserunt ipsa expedita, adipisci assumenda non tempore ex aut fuga sunt laborum? Temporibus alias accusantium similique, corporis fugit labore distinctio? Quas corrupti suscipit quia iste repellat ipsam nulla sapiente asperiores perspiciatis odio. Repudiandae quos ipsa quibusdam praesentium saepe sint optio facilis facere, adipisci accusamus nobis, sunt eligendi? Vitae numquam officia aliquid sint, sed repellat natus incidunt placeat ipsam sequi! Animi autem ea quibusdam exercitationem quisquam. Iure quo laboriosam commodi nobis quas. Sint quo qui dolore quos quis esse architecto quibusdam ea. Laudantium doloremque, in minima tempora unde assumenda, reprehenderit molestias amet sit laboriosam perspiciatis. Nam eos voluptate aliquid facere ad rerum, voluptas obcaecati fuga molestias aliquam accusantium itaque suscipit tempora ea natus laudantium blanditiis, commodi eaque ullam cum, esse laboriosam tenetur? Soluta sequi nihil odit voluptatum velit, explicabo aperiam commodi ipsam, laboriosam odio ut ratione rerum recusandae quam et maiores mollitia dicta quas provident aliquam delectus fugit temporibus officia excepturi. Iste veniam asperiores dolorem, aperiam doloremque magni a ratione dolorum nisi repudiandae molestias sapiente corporis illo ullam quos quo delectus laborum, architecto beatae amet quia sequi possimus ducimus esse! Explicabo alias excepturi debitis culpa eligendi consequuntur quae! Molestias dolorum voluptates omnis quam! Quisquam nobis aliquam ea porro officia reprehenderit esse facere quasi, iusto vitae nostrum eos dolore dolores necessitatibus culpa accusamus alias perspiciatis deleniti omnis ducimus molestiae cumque recusandae. Praesentium quo repellat ad reprehenderit, cupiditate veritatis eius quaerat. Temporibus veritatis culpa ratione, odio aspernatur expedita sint doloribus quisquam vel blanditiis dolorem debitis officiis esse omnis perspiciatis nobis dicta odit animi voluptatem asperiores excepturi alias quibusdam iste autem! Obcaecati explicabo, labore quas eaque qui dolores vel? Exercitationem ullam harum assumenda impedit doloribus aliquid! Labore, veritatis ad nam tempora quos iusto fugiat corporis et officiis voluptate saepe quo facilis dicta ducimus temporibus provident aut eveniet? Asperiores numquam quos odio alias nihil reiciendis explicabo, possimus sed quibusdam magnam est nemo rerum quaerat ipsa temporibus molestias! Rem tenetur perspiciatis incidunt maiores nisi eveniet numquam sint error, unde, doloribus itaque qui cupiditate fuga omnis, facere obcaecati aut ut nostrum consectetur laborum. Perspiciatis, delectus, sunt quidem eligendi iusto provident beatae itaque amet officia vitae impedit id fuga rem vel officiis voluptatem. Recusandae eius nesciunt consequuntur distinctio incidunt doloribus officiis illo iusto.</p>
+    <div id="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus incidunt laborum asperiores! Magnam similique ex aliquam dolore unde nemo eius.</div>
+
   </body>
 </html>
 
