--- a/tailwind-sandbox/11-breakpoints/index.html
+++ b/tailwind-sandbox/11-breakpoints/index.html
@@ -8,7 +8,23 @@
     <title>Breakpoints & Media Queries</title>
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body class="bg-black md:bg-blue-800 2xl:bg-purple-800">
+    <h1 class="text-white text-xl md:text-3xl 2xl:text-5xl"></h1>
+    <button
+    class="bg-white text-black py-2 px-2 rounded-lg lg md:text-3xl 2xl:text-5xl m-3 hover:bg-orange-500 hover:text-black"
+  >Click Me</button>
+
+    <script>
+      function showBrowserWidth() {
+        const width = window.innerWidth;
+
+        document.querySelector('h1').innerHTML = `Width: ${width}px`
+      }
+
+      window.onload = showBrowserWidth;
+      window.onresize = showBrowserWidth;
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
