--- a/tailwind-sandbox/12-columns/index.html
+++ b/tailwind-sandbox/12-columns/index.html
@@ -9,6 +9,26 @@
   </head>
   <body>
     <!-- Columns -->
+    <div class="columns-4 gap-0.5">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+    </div>
+
+    <div class="columns-xs">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+    </div>
+
+    <div class="columns-4">
+      <img class="w-full aspect-video" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full aspect-square" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+      <img class="w-full" src="../assets/img/img1.jpg" alt="">
+    </div>
 
     <!-- Aspect Ratio -->
   </body>
